// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisclosureContainer should render the provided children 1`] = `
<InjectIntl(ApplicationErrorBoundary)>
  <ApplicationLoadingOverlayProvider>
<<<<<<< HEAD
    <NotificationBannerProvider
      fitToParentIsDisabled={false}
    >
      <withPromptRegistration(NavigationPromptCheckpoint)>
        <div>
          Test Child
        </div>
      </withPromptRegistration(NavigationPromptCheckpoint)>
    </NotificationBannerProvider>
=======
    <withPromptRegistration(NavigationPromptCheckpoint)>
      <div>
        Test Child
      </div>
    </withPromptRegistration(NavigationPromptCheckpoint)>
  </ApplicationLoadingOverlayProvider>
</InjectIntl(ApplicationErrorBoundary)>
`;

exports[`DisclosureContainer should render the provided children 2`] = `
<InjectIntl(ApplicationErrorBoundary)>
  <ApplicationLoadingOverlayProvider>
    <withPromptRegistration(NavigationPromptCheckpoint)>
      <div>
        Test Child
      </div>
    </withPromptRegistration(NavigationPromptCheckpoint)>
>>>>>>> master
  </ApplicationLoadingOverlayProvider>
</InjectIntl(ApplicationErrorBoundary)>
`;
